tests/errors/pattern-mut-binding-mode.ari
fn main() -> i64 {
  let mut value = 1;
  return value;
}
